# catgraph

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
catgraph/: CHANGELOG.md  Cargo.toml  README.md
catgraph-applied/: CHANGELOG.md  Cargo.toml  README.md
catgraph-applied/benches/: functor_bench.rs  mat_ops_bench.rs  presentation_bench.rs  rayon_thresholds.rs
catgraph-applied/docs/: FS18-AUDIT.md  SMC-NF-RECONCILIATION.md
catgraph-applied/examples/: agent_hypergraph.rs  e1_operad.rs  e2_operad.rs  enriched_lawvere.rs  linear_combination.rs  mat_operations.rs  operad_functor_e1_to_e2.rs  petri_net.rs  petri_net_braiding.rs  prop_presentation_nf.rs  rig_showcase.rs  temperley_lieb.rs  wiring_diagram.rs
catgraph-applied/src/: decorated_cospan.rs  e1_operad.rs  e2_operad.rs  graphical_linalg.rs  hypergraph.rs  integer.rs  lawvere_metric.rs  lib.rs  linear_combination.rs  mat.rs  mat_f64.rs  mat_kron.rs  mat_to_sfg.rs  operad_algebra.rs  operad_functor.rs  petri_net.rs  rig.rs  sfg.rs  sfg_to_mat.rs  temperley_lieb.rs  trace.rs  wiring_diagram.rs  z.rs
catgraph-applied/src/prop/: mod.rs
catgraph-applied/tests/: decorated_cospan.rs  enriched.rs  functorial.rs  graphical_linalg.rs  kb.rs  lawvere_metric_substrate.rs  lawvere_metric_v055.rs  linear_combination_coverage.rs  mat.rs  mat_f64.rs  mat_mutable_api.rs  mat_to_sfg_roundtrip.rs  normalize_result.rs  operad_algebra.rs  operad_boundary.rs  operad_functor.rs  petri_net.rs  presentation.rs  rayon_equivalence.rs  rayon_parallel.rs  rig_dc_substrate.rs  serde_roundtrip.rs  sfg_to_mat.rs  smc_nf_completeness.proptest-regressions  smc_nf_completeness.rs  smc_nf_regression.rs  temperley_lieb.rs  triangle_inequality_tolerance.rs  wiring_diagram.rs  z_arithmetic.rs  zalgebra_axioms.rs  zalgebra_trait.rs
catgraph-applied/tests/common/: mod.rs
catgraph-dl/: CHANGELOG.md  Cargo.toml  README.md
catgraph-dl/docs/: 2402.15332v2-AUDIT.md  2402.15332v2-SUMMARY.md  AUDIT-CHECKPOINT-v0.4.0.md
catgraph-dl/examples/: README.md  architecture_unrollers.rs  free_monad_basics.rs  para_walkthrough.rs  weight_tying.rs
catgraph-dl/src/: container.rs  endofunctor.rs  lib.rs  natural.rs
catgraph-dl/src/algebra/: coalgebra.rs  f_algebra.rs  group_action.rs  mod.rs  monad_algebra.rs
catgraph-dl/src/architectures/: folding_rnn.rs  mealy_cell.rs  mod.rs  moore_cell.rs  recursive_nn.rs  unfolding_rnn.rs
catgraph-dl/src/free_monad/: cofree_cmnd.rs  free_mnd.rs  list_endo.rs  mod.rs  tree_endo.rs
catgraph-dl/src/hopf_fibration/: mod.rs
catgraph-dl/tests/: THEOREM_MAP.md  algebra_homomorphisms.rs  architecture_unrollers.rs  coalition_consumption_simulation.rs  comonoid_laws.rs  container_laws.rs  free_monad_bijections.rs  functor_laws.rs  module_actegory_laws.rs  monad_algebra_laws.rs  monoidal_coherence_laws.rs  natural_pointed_laws.rs  para_composition.rs  scaffold_smoke.rs
catgraph-magnitude/: CHANGELOG.md  Cargo.toml  README.md
catgraph-magnitude/benches/: magnitude_bench.rs
catgraph-magnitude/docs/: BTV21-AUDIT.md  BV25-AUDIT.md
catgraph-magnitude/examples/: coalition_magnitude.rs  integer_mobius.rs  lm_magnitude.rs  mock_coalition.rs  prop_3_14_acceptance.rs  semantic_comparison.rs  tsallis_shannon.rs
catgraph-magnitude/src/: coalition.rs  coalition_eval.rs  determinism.rs  lib.rs  lm_category.rs  magnitude.rs  mobius_chains.rs  poset_category.rs  ring.rs  semantic.rs  weighted_cospan.rs  yoneda.rs
catgraph-magnitude/tests/: bv_2025_acceptance.rs  chain_complex_basic.rs  chain_complex_pseudo_metric.rs  coalition_consumer.rs  euler_char_identity.rs  integer_like_rig.rs  lm_category.rs  magnitude.rs  magnitude_homology_4state_scattered.rs  mobius_chains.proptest-regressions  mobius_chains.rs  mobius_chains_exact.rs  mobius_invertibility.rs  poset_category.rs  snf_band.rs  snf_basic.rs  snf_crt_reconstruct.rs  snf_diagonal.rs  snf_echelon.rs  snf_hadamard.rs  snf_integer_lift.rs  snf_matr_roundtrip.rs  snf_modularsnf_integer_oracle.rs  snf_phase1.rs  snf_prime_selector.rs  snf_wikipedia.rs  weighted_cospan.rs  weighting_coweighting.rs  z_substrate.rs
catgraph-physics/: CHANGELOG.md  Cargo.toml  README.md
catgraph-physics/benches/: wasserstein_bench.rs
catgraph-physics/docs/: ANCHORS.md
catgraph-physics/examples/: gauge.rs  hypergraph.rs  multiway.rs  wasi_smoke_physics.rs
catgraph-physics/src/: interval.rs  lib.rs  temporal_cospan_chain.rs  trace.rs
catgraph-physics/tests/: branchial_analysis.rs  gauge_theory.rs  hypergraph_rewriting.rs  multiway_evolution.rs
catgraph-syntax/: CHANGELOG.md  Cargo.toml  README.md
catgraph-syntax/docs/: ANCHORS.md
catgraph-syntax/examples/: README.md  assembly_composition.rs  frobenius_wiring.rs  programmatic_construction.rs
catgraph-syntax/src/: arrow_seam.rs  cospan_functor.rs  depth.rs  errors.rs  eval.rs  frobenius.rs  lib.rs  sfg_syntax.rs  traced.rs
catgraph-syntax/tests/: cospan_complete_functor.rs  eval.rs  frobenius.rs  parser.rs  persistence.rs  presentation.rs  printer_golden.rs  recursion_guard.rs  serde_roundtrip.rs  traced.rs
catgraph-testutil/: CHANGELOG.md  Cargo.toml
catgraph-testutil/src/: lib.rs
catgraph/benches/: pullback.rs  pushout.rs
catgraph/docs/: FS19-AUDIT.md
catgraph/examples/: compact_closed.rs  corel.rs  cospan.rs  cospan_algebra.rs  equivalence.rs  finset.rs  frobenius.rs  hypergraph_category.rs  hypergraph_functor.rs  monoidal.rs  named_cospan.rs  span.rs
catgraph/src/: category.rs  compact_closed.rs  corel.rs  cospan.rs  cospan_algebra.rs  cospan_canon.rs  equivalence.rs  errors.rs  finset.rs  hypergraph_category.rs  hypergraph_functor.rs  lib.rs  monoidal.rs  named_cospan.rs  operadic.rs  span.rs  utils.rs
catgraph/tests/: compact_closed.rs  composition_laws.rs  corel.rs  cospan_algebra.rs  cospan_compose_with_quotient.rs  cross_type_interactions.rs  equivalence.rs  finset_coverage.rs  frobenius_laws.rs  hypergraph_functor.rs  monoidal_structure.rs  morphism_system.rs  property_laws.rs  pushout_correctness.rs  rayon_equivalence.rs  rayon_parallel.rs  relation_algebra.rs  spider_theorem.rs
(+51 files in other folders)
