[workspace]
resolver = "2"
members = [
    "catgraph",
    "catgraph-applied",
    "catgraph-magnitude",
    "catgraph-physics",
    "catgraph-dl",
    "catgraph-syntax",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["sustia-llc"]
repository = "https://github.com/sustia-llc/catgraph"

[workspace.dependencies]
# --- intra-workspace (path wins locally; version present for a future publish) ---
catgraph           = { path = "catgraph",           version = "0.3.0", default-features = false }
catgraph-applied   = { path = "catgraph-applied",   version = "0.3.0", default-features = false }
catgraph-magnitude = { path = "catgraph-magnitude", version = "0.3.0" }

# --- DeepCausality thin substrate — PIN EXACT (DC is 0.x, churning).
#     Fallback: { git = "https://github.com/deepcausality-rs/deep_causality", rev = "3280cb844" }
#     haft is live (catgraph-dl endofunctor layer, #12); num deps-only until a member opts in (#36).
deep_causality_num  = "=0.4.0"
deep_causality_haft = "=0.4.0"

# --- math / graph — numeric-only, NOT an algebraic substrate ---
# (members opt in with `{ workspace = true, optional = true }`; `optional` is illegal here.)
nalgebra       = "0.35"   # field-bounded paths only
permutations   = "0.1"    # backs braiding — DC Arrow has none
rustworkx-core = "0.18"
# `ultragraph` (DeepCausality zero-dep graph substrate) backs the connectivity /
# toposort sites in `catgraph` (MorphismSystem) + `catgraph-applied` (Temperley-Lieb
# composition), having replaced rustworkx-core/petgraph there (Track A, 2026-06-27).
# rustworkx-core remains only in `catgraph-physics` (coloring + k-core have no
# ultragraph equivalent; see issue #10).
ultragraph     = "0.9"

# --- general ---
either       = "1.6.1"
itertools    = "0.15"
num          = "0.4"   # narrowed to BigInt / Complex / ToPrimitive / pow (NOT Zero/One — those come from DC)
rand         = "0.10"
rayon        = "1.12"
rust_decimal = "1"
# `serde` is opt-in per member (`{ workspace = true, optional = true }` behind a
# `serde` feature) — off by default so the default build stays serde-free (#81).
# Term persistence: morphisms serialize as `PropExpr<G>` terms (feeds #72/#73).
serde        = { version = "1", features = ["derive"] }
thiserror    = "2"     # workspace error-derive pattern (CatgraphError, HypergraphError — #28)

# --- dev ---
proptest   = "1"
criterion  = { version = "0.8", features = ["html_reports"] }
serde_json = "1"       # serde round-trip tests only (dev-dep, behind the `serde` feature)
