[package]
name = "catgraph-applied"
description = "Applied category theory extensions for catgraph: Petri nets, E_n operads, Temperley-Lieb, wiring diagrams, linear combinations, props, operad algebras and functors"
keywords = ["category-theory", "operad", "petri-net", "temperley-lieb", "wiring-diagram"]
categories = ["mathematics", "science", "data-structures"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["parallel"]
# `parallel` enables rayon + rayon_cond::CondIterator at the two HashMap
# `into_par_iter` sites in linear_combination and the two `par_bridge` sites
# in temperley_lieb::non_crossing. With the feature off, those sites fall
# back to plain `.into_iter()`. Phase W.1.
parallel = ["dep:rayon", "dep:rayon-cond", "catgraph/parallel"]
# `f64-rig` exposes the mat_f64 module: nalgebra bridge for MatR<F64Rig>
# (determinant, try_inverse, DMatrix roundtrip). Opt-in; off by default to
# keep the nalgebra compile cost out of the way for Tropical / Bool / user
# rigs that can't use field-specific operations anyway.
f64-rig = ["dep:nalgebra"]
# `internal-bench` — Benchmark-only: exposes internal APIs
# (`CongruenceClosure::atom_canonical_for_bench`) for bench fixtures
# only. **NOT public API.** Drives the `presentation::atom_canonical_n*`
# group in `benches/presentation_bench.rs`. Opt-in only (NOT in `default`).
internal-bench = []
# `serde` adds `Serialize`/`Deserialize` derives on the term surface
# (`PropExpr`, `Presentation`, `PresentedProp`, `NormalizeEngine`,
# `NormalizeResult`, `SfgGenerator`). Off by default — zero-dep default build
# preserved. Terms are the machine-persistence representation of morphisms
# (feeds #72/#73). Deserialization trusts the arity invariant (see `Presentation`).
serde = ["dep:serde"]

[dependencies]
catgraph = { workspace = true }
deep_causality_num = { workspace = true }
either.workspace = true
itertools.workspace = true
nalgebra = { workspace = true, optional = true }
# `num` is narrowed to BigInt / Complex / ToPrimitive / pow ONLY — Zero/One are
# re-sourced from `deep_causality_num` (Phase 2 re-substrate). A CI grep-guard
# keeps `num::{Zero,One}` from creeping back outside the documented exception
# list (z.rs, temperley_lieb.rs, petri_net.rs, e2_operad.rs).
num.workspace = true
permutations.workspace = true
rand.workspace = true
rayon = { workspace = true, optional = true }
rayon-cond = { version = "0.4", optional = true }
rust_decimal.workspace = true
serde = { workspace = true, optional = true }
# Workspace error-derive pattern (already in the tree via catgraph core's
# CatgraphError; adopted for HypergraphError per #28 — no new lockfile entry).
thiserror.workspace = true
# `temperley_lieb` composition connectivity (zero-dep DC graph substrate;
# replaced rustworkx-core/petgraph 2026-06-27, Track A).
ultragraph = { workspace = true }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
serde_json.workspace = true

[[bench]]
name = "rayon_thresholds"
harness = false

[[bench]]
name = "mat_ops_bench"
harness = false

[[bench]]
name = "functor_bench"
harness = false

[[bench]]
name = "presentation_bench"
harness = false
