[package]
name = "catgraph-dl"
description = "Categorical Deep Learning substrate: Para 2-category, monad/F-(co)algebras, free-monad RNN unrolling, comonoid weight tying. Anchored to Gavranović et al., 'Categorical Deep Learning is an Algebraic Theory of All Architectures' (ICML 2024)."
keywords = ["category-theory", "deep-learning", "para-category", "monad", "f-algebra"]
categories = ["mathematics", "science"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
catgraph = { workspace = true }
catgraph-applied = { workspace = true }
# DeepCausality substrate.
# `deep_causality_haft` is IN USE (issue #12): the endofunctor abstraction is
# haft's `HKT`/`Functor` witnesses, adopted in `src/endofunctor.rs` (the single
# import seam) and consumed across `algebra::` and `free_monad::`. `Either` (for
# `TreeEndo`) is sourced from haft too, so `catgraph-dl` no longer needs the
# `either` crate.
# `deep_causality_num` stays DEPS-ONLY, reserved for the R-module / F64Module
# surfaces (#36) which need `Zero`/`One`. Not referenced anywhere in the crate —
# `rg deep_causality_num src` returns no hits (post-#12 the doc mentions went
# too). Rig `Zero`/`One` are inherited transitively from `catgraph-applied`'s `Rig`.
deep_causality_num = { workspace = true }
deep_causality_haft = { workspace = true }

[dev-dependencies]
proptest.workspace = true
