[package]
name = "catgraph-dl"
description = "Categorical Deep Learning substrate: Para 2-category, monad/F-(co)algebras, free-monad RNN unrolling, comonoid weight tying. Anchored to Gavranović et al., 'Categorical Deep Learning is an Algebraic Theory of All Architectures' (ICML 2024)."
keywords = ["category-theory", "deep-learning", "para-category", "monad", "f-algebra"]
categories = ["mathematics", "science"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
catgraph = { workspace = true }
catgraph-applied = { workspace = true }
# DeepCausality substrate.
# `deep_causality_haft` is IN USE (issue #12): the endofunctor abstraction is
# haft's `HKT`/`Functor` witnesses, adopted in `src/endofunctor.rs` (the single
# import seam) and consumed across `algebra::` and `free_monad::`. `Either` (for
# `TreeEndo`) is sourced from haft too, so `catgraph-dl` no longer needs the
# `either` crate.
# `deep_causality_num` is IN USE (issue #36): `src/para/module_actegory.rs`
# imports its root `Zero`/`One` for the `F64Module` R-module actegory — the
# ring's additive identity fills the zero vector (`F64Module::zeros`) and the
# multiplicative identity marks each standard-basis generator
# (`F64Module::basis`). `rg deep_causality_num src` now hits that module. Only
# `Zero`/`One` are used (workspace rule: the DC substrate stays thin). The
# umbrella #36 stays open for the still-deferred non-Set surfaces
# (hyperdoctrine, vector-bundle, lazy final-coalgebra). Rig `Zero`/`One` are
# still inherited transitively from `catgraph-applied`'s `Rig`.
deep_causality_num = { workspace = true }
deep_causality_haft = { workspace = true }

[dev-dependencies]
proptest.workspace = true
