[package]
name = "catgraph-magnitude"
description = "Magnitude of enriched categories + magnitude homology (Bradley–Vigneaux 2025; Leinster)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
