[package]
name = "catgraph-magnitude"
description = "Magnitude of enriched categories for catgraph: Lawvere metric spaces, Tsallis entropy, Möbius inversion, and BV 2025 closed-form magnitude"
keywords = ["category-theory", "magnitude", "entropy", "enriched-category", "information-theory"]
categories = ["mathematics", "science"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
# magnitude no longer needs a `rustworkx` feature: both `catgraph` and
# `catgraph-applied` are on the zero-dep `ultragraph` substrate (Track A), so
# there is no petgraph-backed flag left to forward.
default = []
# Dev-only cross-validation against `events555/modularsnf` (marker feature;
# gates compilation of tests/snf_modularsnf_integer_oracle.rs).
modularsnf-oracle = []

[dependencies]
catgraph = { workspace = true }
catgraph-applied = { workspace = true }
deep_causality_num = { workspace = true }
# `num` is kept for `BigInt` + `ToPrimitive` only (integer-exact SNF / CRT lift
# and BigInt→i64 rank recovery). DC has no arbitrary-precision BigInt, so the
# custom integer SNF (Storjohann + Newman) and `Z(BigInt)` stay on `num`.
# Rig `Zero`/`One` come from `deep_causality_num` (inherited via the `Rig` bound).
num.workspace = true
primal = "0.3"

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
# Shared deterministic LCG for seeded test/bench/example fixtures (#33).
catgraph-testutil.workspace = true
# Dev-only oracle for tests/snf_modularsnf_integer_oracle.rs (gated by the
# `modularsnf-oracle` feature). Cargo disallows optional dev-deps, so these are
# unconditional; the test source is `#![cfg(feature = "modularsnf-oracle")]`.
modularsnf = { git = "https://github.com/events555/modularsnf", rev = "7eda45d" }
ndarray = "0.16"

[[bench]]
name = "magnitude_bench"
harness = false
