[package]
name = "catgraph"
description = "Category-theoretic graph structures: cospans, spans, Frobenius algebras, and morphisms in symmetric monoidal categories — strict Fong-Spivak 2019"
keywords = ["category-theory", "cospan", "monoidal", "frobenius", "operad"]
categories = ["mathematics", "science", "data-structures"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["parallel"]
# `parallel` enables rayon-based data parallelism at a few hot call sites
# (named_cospan::find_nodes_by_name_predicate, frobenius::hflip). Disable for
# single-threaded `wasm32-wasip1`; keep on for `-threads` and native targets.
parallel = ["dep:rayon"]

[dependencies]
either.workspace = true
itertools.workspace = true
permutations.workspace = true
rayon = { workspace = true, optional = true }
# `ultragraph` backs `MorphismSystem`'s dependency-graph toposort (acyclicity
# check in `add_definition_composite` + resolution order in `fill_black_boxes`),
# replacing the former petgraph/rustworkx-core path with a zero-dep substrate.
ultragraph = { workspace = true }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
thiserror.workspace = true
union-find = "0.4"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
rand.workspace = true
env_logger = "0.11"

[[example]]
name = "cospan"

[[example]]
name = "frobenius"

[[bench]]
name = "pushout"
harness = false

[[bench]]
name = "pullback"
harness = false
